[gd_scene load_steps=22 format=3 uid="uid://bd0ot0mn1b1s4"]

[ext_resource type="Texture2D" uid="uid://bn6l4q1ngmf3e" path="res://assets/sprites/Ship.png" id="1_d05rp"]
[ext_resource type="Script" path="res://entities/player/player.gd" id="1_n1qi1"]
[ext_resource type="Script" path="res://components/move_component.gd" id="3_wj01d"]
[ext_resource type="Script" path="res://components/move_input_component.gd" id="4_g62ex"]
[ext_resource type="Resource" uid="uid://fyrde4v6qqut" path="res://entities/player/ship_move_stats.tres" id="5_qhdno"]
[ext_resource type="Script" path="res://components/position_clamp_component.gd" id="6_s4vh4"]
[ext_resource type="Script" path="res://components/spawner_component.gd" id="7_j3qg7"]
[ext_resource type="PackedScene" uid="uid://bqajvowk3co3s" path="res://entities/laser/laser.tscn" id="8_sptwu"]
[ext_resource type="Script" path="res://components/scale_component.gd" id="9_us5st"]
[ext_resource type="Texture2D" uid="uid://d0fsfkgscpuf8" path="res://assets/sprites/Fire.png" id="10_1o7v8"]

[sub_resource type="AtlasTexture" id="AtlasTexture_v8off"]
atlas = ExtResource("10_1o7v8")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_hkbmk"]
atlas = ExtResource("10_1o7v8")
region = Rect2(16, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_jp223"]
atlas = ExtResource("10_1o7v8")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_c3vbl"]
atlas = ExtResource("10_1o7v8")
region = Rect2(0, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_chkxi"]
atlas = ExtResource("10_1o7v8")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_j1nkb"]
atlas = ExtResource("10_1o7v8")
region = Rect2(32, 16, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_nmtd1"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_v8off")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hkbmk")
}],
"loop": true,
"name": &"center",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_jp223")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c3vbl")
}],
"loop": true,
"name": &"turn_left",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_chkxi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j1nkb")
}],
"loop": true,
"name": &"turn_right",
"speed": 8.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_1rq8c"]
atlas = ExtResource("1_d05rp")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_1vqwn"]
atlas = ExtResource("1_d05rp")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_tsdbs"]
atlas = ExtResource("1_d05rp")
region = Rect2(32, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_ielsg"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1rq8c")
}],
"loop": true,
"name": &"center",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1vqwn")
}],
"loop": true,
"name": &"turn_left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_tsdbs")
}],
"loop": true,
"name": &"turn_right",
"speed": 5.0
}]

[node name="Player" type="Node2D" node_paths=PackedStringArray("left_gun", "right_gun", "spawner_component", "fire_rate_timer", "scale_component", "ship", "fire", "move_component")]
script = ExtResource("1_n1qi1")
left_gun = NodePath("LeftGun")
right_gun = NodePath("RightGun")
spawner_component = NodePath("SpawnerComponent")
fire_rate_timer = NodePath("FireRateTimer")
scale_component = NodePath("ScaleComponent")
ship = NodePath("Anchor/Ship")
fire = NodePath("Anchor/Fire")
move_component = NodePath("MoveComponent")

[node name="Anchor" type="Node2D" parent="."]

[node name="Fire" type="AnimatedSprite2D" parent="Anchor"]
position = Vector2(0, 16)
sprite_frames = SubResource("SpriteFrames_nmtd1")
animation = &"center"
autoplay = "center"

[node name="Ship" type="AnimatedSprite2D" parent="Anchor"]
sprite_frames = SubResource("SpriteFrames_ielsg")
animation = &"center"
autoplay = "center"

[node name="MoveComponent" type="Node" parent="." node_paths=PackedStringArray("entity")]
script = ExtResource("3_wj01d")
entity = NodePath("..")

[node name="MoveInputComponent" type="Node" parent="." node_paths=PackedStringArray("move_component")]
script = ExtResource("4_g62ex")
move_stats = ExtResource("5_qhdno")
move_component = NodePath("../MoveComponent")

[node name="PositionClampComponent" type="Node2D" parent="." node_paths=PackedStringArray("entity")]
script = ExtResource("6_s4vh4")
entity = NodePath("..")

[node name="LeftGun" type="Marker2D" parent="."]
position = Vector2(-5, -5)

[node name="RightGun" type="Marker2D" parent="."]
position = Vector2(5, -5)

[node name="SpawnerComponent" type="Node2D" parent="."]
script = ExtResource("7_j3qg7")
scene = ExtResource("8_sptwu")

[node name="FireRateTimer" type="Timer" parent="."]
wait_time = 0.4
autostart = true

[node name="ScaleComponent" type="Node" parent="." node_paths=PackedStringArray("sprite")]
script = ExtResource("9_us5st")
sprite = NodePath("../Anchor")
